# web-chat

./: README.md
backend/: .env  .env.dev  .env.example  .env.test  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/core/: auth.py  config.py  db.py  exceptions.py
backend/app/core/websockets/: connection_manager.py  websocket_manager.py
backend/app/dependencies/: auth.py  services.py
backend/app/models/: __init__.py  invitation.py  invite.py  member.py  message.py  notification.py  room.py  user.py
backend/app/repository/: __init__.py  invite.py  member.py  message.py  notification.py  room.py  user.py
backend/app/routers/: auth.py  invite.py  member.py  message.py  notification.py  room.py  user.py  websockets.py
backend/app/schemas/: __init__.py  invite.py  member.py  message.py  notification.py  response.py  room.py  user.py
backend/app/services/: __init__.py  invite.py  member.py  message.py  notification.py  room.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 03d1623b0de7_update_user.py  05e359a49473_init.py  09da1fd3a630_init.py  0a12769e7312_init.py  1cad6c51e8a1_init.py  7af48486281f_update_notification.py  909a791e97e8_2.py  91407337a817_init.py  9b4c5a1064fa_1.py  9cfdaf2f79e8_update.py  a7b0093f7df5_init.py  be2428743148_3.py  c29783e53ba4_2.py  d1d91d0d334a_update.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_invite.py  test_message.py  test_room.py
frontend/: .env  .eslintrc-auto-import.json  (+10 more)
(+180 files in other folders)
