[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.13.5"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
fastapi = {extras = ["standard"], version = "^0.136.1"}
httpx = "^0.28.1"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
pyjwt = "^2.13.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
python-jose = "^3.5.0"
python-dotenv = "^1.2.2"
sqlalchemy = "^2.0.49"
nanoid = "^2.0.0"
passlib = "^1.7.4"
pytest-env = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = ["-v", "-p", "no:warnings", "-s", "--capture=no"]

env = ["ENV_STATE=test"]